--- a/index.html
+++ b/index.html
@@ -346,13 +346,10 @@ canvas{max-height:320px}
     <div class="chart-card">
       <div class="chart-title" style="display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;gap:8px;">
         <span>📊 Expense Breakdown by Category</span>
-        <div style="display:flex;gap:6px;align-items:center;flex-wrap:wrap;">
-          <select id="expYearSelect" onchange="expYearChanged()" style="padding:4px 10px;border-radius:8px;border:1px solid #cbd5e1;font-size:12px;font-weight:600;background:#fff;display:none;"></select>
-          <div id="expMonthBtns" style="display:flex;gap:6px;flex-wrap:wrap;"></div>
-        </div>
+        <select id="expPeriodDropdown" onchange="expPeriodChanged()" style="padding:6px 14px;border-radius:8px;border:1px solid #cbd5e1;font-size:13px;font-weight:600;background:#fff;color:#1f2937;cursor:pointer;"></select>
       </div>
       <div id="expPartialNote" style="display:none;background:#fef3c7;border:1px solid #f59e0b;border-radius:6px;padding:6px 12px;font-size:12px;color:#92400e;margin:6px 0;">⚠️ Feb 2026 is <strong>partial</strong> — Chase Business Checking statement not yet uploaded. Credit card expenses only.</div>
-      <div style="position:relative;height:420px;"><canvas id="expenseDonut" style="width:100%;height:100%;"></canvas></div>
+      <div id="expenseDonutWrap" style="position:relative;"><canvas id="expenseDonut" style="width:100%;height:100%;"></canvas></div>
     </div>
   </div>
   <!-- Revenue by Platform Pie Chart -->
@@ -1925,233 +1922,184 @@ function initDashboard() {
   });
   })();
 
-  // ─── 2. EXPENSE BREAKDOWN ─ Stacked Bar by Month (dynamic) ─────────────
+  // ─── 2. EXPENSE BREAKDOWN ─ Horizontal Bar by Category ──────────────────
   (function(){
     var expBrkInst = null;
-    var expCurrentYear = null;
-    var expCurrentView = 'monthly'; // 'monthly' | 'ytd' | 'YYYY-MM' (single month)
+    var expCurrentPeriod = null; // 'YYYY-MM' or 'ytd-YYYY'
 
-    var EXP_CAT_COLORS = {
-      'Mortgage':'#ef4444','Repairs & Labor':'#3b82f6','Repairs':'#3b82f6',
-      'Materials & Supplies':'#f59e0b','Materials':'#f59e0b',
-      'Landscaping':'#84cc16','Marketing':'#fb7185','Cleaning':'#ec4899',
-      'Internet':'#8b5cf6','Electric':'#f97316','Gas':'#eab308',
-      'Water':'#06b6d4','Solar':'#22c55e','Insurance':'#64748b',
-      'VA & Staff':'#c084fc','VA':'#c084fc','Legal & Prof.':'#67e8f9','Legal':'#67e8f9',
-      'Furnishings':'#a78bfa','Software & Tech':'#94a3b8','Software':'#94a3b8',
-      'Phone':'#22d3ee','Utility':'#0891b2','Utilities':'#0891b2',
-      'Bank Fees':'#fbbf24','Business General':'#d97706',
-      'Other':'#475569','Travel':'#fde68a'
+    var CAT_COLOR_MAP = {
+      'Mortgage':    '#4f46e5',
+      'Repairs':     '#ef4444',
+      'Materials':   '#f97316',
+      'Landscaping': '#22c55e',
+      'Utility':     '#06b6d4',
+      'Utilities':   '#06b6d4',
+      'Electric':    '#06b6d4',
+      'Gas':         '#8b5cf6',
+      'Internet':    '#0ea5e9',
+      'Solar':       '#eab308',
+      'Furnishings': '#ec4899',
+      'Marketing':   '#f43f5e',
+      'Software':    '#14b8a6',
+      'Supplies':    '#84cc16',
+      'Management':  '#a855f7',
+      'Insurance':   '#f59e0b',
+      'Water':       '#38bdf8',
+      'Cleaning':    '#fb923c',
+      'Other':       '#94a3b8'
     };
-    var EXP_FALLBACK = ['#c9a84c','#60a5fa','#4ade80','#fbbf24','#f472b6',
-      '#a855f7','#38bdf8','#fb923c','#e11d48','#0ea5e9','#d946ef','#10b981'];
-    function expCatColor(cat, idx) {
-      return EXP_CAT_COLORS[cat] || EXP_FALLBACK[idx % EXP_FALLBACK.length];
+    var fallbackColors = ['#6366f1','#10b981','#f59e0b','#ec4899','#8b5cf6','#14b8a6','#f97316','#3b82f6'];
+    function getCatColor(cat, i) {
+      return CAT_COLOR_MAP[cat] || fallbackColors[i % fallbackColors.length];
     }
-
-    var SKIP_CATS = ['Credit Card Payment','Transfer','Zelle Transfer'];
 
     function getExpTxns() {
-      var all = (typeof expensesAutoLoaded !== 'undefined') ? expensesAutoLoaded : [];
-      return all.filter(function(e) {
-        return !e.income && !SKIP_CATS.includes(e.cat) && e.date && e.date.length >= 7;
+      if (typeof expensesAutoLoaded !== 'undefined' && expensesAutoLoaded.length) return expensesAutoLoaded;
+      return [];
+    }
+
+    function buildPeriodOptions(txns) {
+      // Returns array of {value, label} options
+      var yearMonths = {}; // year -> Set of YYYY-MM
+      txns.forEach(function(t) {
+        if (!t.date || t.income) return;
+        var ym = t.date.substring(0,7);
+        var yr = t.date.substring(0,4);
+        if (!yearMonths[yr]) yearMonths[yr] = new Set();
+        yearMonths[yr].add(ym);
       });
-    }
-
-    function getYears(txns) {
-      var s = new Set();
-      txns.forEach(function(e){ s.add(e.date.substring(0,4)); });
-      return Array.from(s).sort().reverse();
-    }
-
-    function getMonthsForYear(txns, year) {
-      var s = new Set();
-      txns.forEach(function(e){ if(e.date.startsWith(year)) s.add(e.date.substring(0,7)); });
-      return Array.from(s).sort();
-    }
-
-    function buildStackedData(txns, year, view) {
-      // filter to year (or single month)
-      var filtered = txns.filter(function(e){ return e.date.startsWith(year); });
-      if (view !== 'monthly' && view !== 'ytd') {
-        filtered = txns.filter(function(e){ return e.date.startsWith(view); });
-      }
-
-      // Aggregate by month → category
-      var byMC = {};
-      filtered.forEach(function(e) {
-        var ym = (view !== 'monthly' && view !== 'ytd') ? view : e.date.substring(0,7);
-        if (!byMC[ym]) byMC[ym] = {};
-        byMC[ym][e.cat] = (byMC[ym][e.cat] || 0) + Math.abs(e.amount);
-      });
-
-      var months = (view === 'ytd')
-        ? ['ytd']
-        : (view !== 'monthly' ? [view] : Object.keys(byMC).sort());
-
-      if (view === 'ytd') {
-        // collapse all months into one YTD total
-        var ytdTotals = {};
-        Object.keys(byMC).forEach(function(m) {
-          Object.keys(byMC[m]).forEach(function(c) {
-            ytdTotals[c] = (ytdTotals[c] || 0) + byMC[m][c];
-          });
+      var years = Object.keys(yearMonths).sort().reverse();
+      var options = [];
+      years.forEach(function(yr) {
+        var months = Array.from(yearMonths[yr]).sort();
+        months.forEach(function(ym) {
+          var d = new Date(ym + '-15');
+          var lbl = d.toLocaleString('en-US', {month:'short', year:'numeric'});
+          options.push({value: ym, label: lbl});
         });
-        byMC = { ytd: ytdTotals };
-      }
-
-      // All categories sorted by total desc
-      var catTotals = {};
-      months.forEach(function(m) {
-        if (!byMC[m]) return;
-        Object.keys(byMC[m]).forEach(function(c) {
-          catTotals[c] = (catTotals[c] || 0) + byMC[m][c];
-        });
+        options.push({value: 'ytd-' + yr, label: 'YTD ' + yr});
       });
-      var cats = Object.keys(catTotals).sort(function(a,b){ return catTotals[b]-catTotals[a]; });
-
-      var labels = months.map(function(ym) {
-        if (ym === 'ytd') return 'YTD ' + year;
-        var d = new Date(ym + '-15');
-        return d.toLocaleString('en-US', {month:'short', year:'numeric'});
-      });
-
-      var datasets = cats.map(function(cat, i) {
-        return {
-          label: cat,
-          data: months.map(function(m){ return (byMC[m] && byMC[m][cat]) ? byMC[m][cat] : 0; }),
-          backgroundColor: expCatColor(cat, i),
-          borderColor: 'rgba(255,255,255,0.3)',
-          borderWidth: 1,
-          borderRadius: 3
-        };
-      });
-
-      return { labels: labels, datasets: datasets };
+      return options;
     }
 
-    function styleBtn(btn, active) {
-      btn.style.cssText = 'padding:5px 12px;border-radius:20px;font-size:12px;font-weight:600;cursor:pointer;' +
-        (active ? 'background:#c9a84c;border:2px solid #c9a84c;color:#fff;'
-                : 'background:transparent;border:2px solid #94a3b8;color:#475569;');
-    }
-
-    function renderControls(txns, year, months) {
-      // Year dropdown
-      var sel = document.getElementById('expYearSelect');
-      var years = getYears(txns);
-      sel.innerHTML = '';
-      years.forEach(function(y) {
-        var o = document.createElement('option');
-        o.value = y; o.textContent = y;
-        if (y === year) o.selected = true;
-        sel.appendChild(o);
+    function buildCategoryTotals(txns, period) {
+      var totals = {};
+      txns.forEach(function(t) {
+        if (!t.date || t.income) return;
+        var ym = t.date.substring(0,7);
+        var yr = t.date.substring(0,4);
+        var match = false;
+        if (period === 'ytd-' + yr) match = true;
+        else if (period === ym) match = true;
+        if (!match) return;
+        var cat = t.cat || 'Other';
+        totals[cat] = (totals[cat] || 0) + (t.amount || 0);
       });
-      sel.style.display = years.length > 1 ? '' : 'none';
-
-      // Month buttons
-      var container = document.getElementById('expMonthBtns');
-      container.innerHTML = '';
-
-      var allBtn = document.createElement('button');
-      allBtn.textContent = 'All Months';
-      allBtn.onclick = function(){ expCurrentView = 'monthly'; renderExpBreakdown(); };
-      styleBtn(allBtn, expCurrentView === 'monthly');
-      container.appendChild(allBtn);
-
-      months.forEach(function(ym) {
-        var d = new Date(ym + '-15');
-        var lbl = d.toLocaleString('en-US', {month:'short', year:'2-digit'});
-        var btn = document.createElement('button');
-        btn.textContent = lbl;
-        btn.onclick = (function(m){ return function(){ expCurrentView = m; renderExpBreakdown(); }; })(ym);
-        styleBtn(btn, expCurrentView === ym);
-        container.appendChild(btn);
-      });
-
-      var ytdBtn = document.createElement('button');
-      ytdBtn.textContent = 'YTD';
-      ytdBtn.onclick = function(){ expCurrentView = 'ytd'; renderExpBreakdown(); };
-      styleBtn(ytdBtn, expCurrentView === 'ytd');
-      container.appendChild(ytdBtn);
+      return totals;
     }
 
     function renderExpBreakdown() {
       var txns = getExpTxns();
-      var years = getYears(txns);
-      if (!years.length) return;
-      if (!expCurrentYear || !years.includes(expCurrentYear)) expCurrentYear = years[0];
+      var options = buildPeriodOptions(txns);
+      if (!options.length) return;
 
-      var months = getMonthsForYear(txns, expCurrentYear);
-      renderControls(txns, expCurrentYear, months);
+      // Build dropdown
+      var sel = document.getElementById('expPeriodDropdown');
+      if (!sel) return;
+      var currentVal = sel.value || (expCurrentPeriod || options[options.length - 1].value);
+      sel.innerHTML = '';
+      options.forEach(function(opt) {
+        var o = document.createElement('option');
+        o.value = opt.value;
+        o.textContent = opt.label;
+        if (opt.value === currentVal) o.selected = true;
+        sel.appendChild(o);
+      });
+      // If nothing selected, default to last item (YTD of most recent year)
+      if (!sel.value) sel.value = options[options.length - 1].value;
+      expCurrentPeriod = sel.value;
 
-      // Partial note
-      var note = document.getElementById('expPartialNote');
-      if (note) note.style.display = (expCurrentView === '2026-02') ? 'block' : 'none';
+      // Build category totals for selected period
+      var totals = buildCategoryTotals(txns, expCurrentPeriod);
+      var total = Object.values(totals).reduce(function(s,v){return s+v;},0);
 
-      var chartData = buildStackedData(txns, expCurrentYear, expCurrentView);
+      // Sort categories by amount descending
+      var cats = Object.keys(totals).sort(function(a,b){return totals[b]-totals[a];});
+      var amounts = cats.map(function(c){return Math.round(totals[c]);});
+      var colors = cats.map(function(c,i){return getCatColor(c,i);});
+
+      // Dynamic height: 52px per category + 60px padding
+      var chartHeight = cats.length * 52 + 60;
+      var wrap = document.getElementById('expenseDonutWrap');
+      if (wrap) wrap.style.height = chartHeight + 'px';
 
       var canvas = document.getElementById('expenseDonut');
       if (expBrkInst) { expBrkInst.destroy(); expBrkInst = null; }
 
       expBrkInst = new Chart(canvas, {
         type: 'bar',
-        data: chartData,
+        data: {
+          labels: cats,
+          datasets: [{
+            data: amounts,
+            backgroundColor: colors,
+            borderRadius: 5,
+            borderSkipped: false,
+            barThickness: 36
+          }]
+        },
         options: {
+          indexAxis: 'y',
           responsive: true,
           maintainAspectRatio: false,
           plugins: {
-            legend: {
-              display: true,
-              position: 'bottom',
-              labels: {
-                color: '#1f2937', font: { size: 11 },
-                padding: 10, usePointStyle: true, pointStyleWidth: 10,
-                boxWidth: 12
+            legend: { display: false },
+            datalabels: {
+              anchor: 'end',
+              align: 'end',
+              color: '#1f2937',
+              font: { size: 12, weight: 'bold' },
+              formatter: function(v) {
+                var pct = total > 0 ? ((v / total) * 100).toFixed(1) : '0.0';
+                return '$' + v.toLocaleString() + ' (' + pct + '%)';
               }
             },
-            datalabels: { display: false },
             tooltip: {
               backgroundColor: 'rgba(10,25,47,0.96)',
               borderColor: '#c9a84c', borderWidth: 1,
               titleColor: '#c9a84c', bodyColor: '#e2e8f0',
               callbacks: {
                 label: function(ctx) {
-                  if (!ctx.parsed.y) return null;
-                  return '  ' + ctx.dataset.label + ': $' + ctx.parsed.y.toLocaleString();
-                },
-                footer: function(items) {
-                  var total = items.reduce(function(s,i){ return s + (i.parsed.y||0); }, 0);
-                  return 'Total: $' + total.toLocaleString();
+                  var pct = total > 0 ? ((ctx.raw / total) * 100).toFixed(1) : '0.0';
+                  return '  $' + ctx.raw.toLocaleString() + ' (' + pct + '% of expenses)';
                 }
               }
             }
           },
           scales: {
             x: {
-              stacked: true,
-              ticks: { color: '#1f2937', font: { size: 12, weight: '600' } },
-              grid: { display: false }
+              ticks: { color: '#1f2937', callback: function(v){ return '$' + (v/1000).toFixed(0) + 'k'; } },
+              grid: { color: 'rgba(0,0,0,0.06)' }
             },
             y: {
-              stacked: true,
-              ticks: { color: '#1f2937', callback: function(v){ return '$' + v.toLocaleString(); } },
-              grid: { color: 'rgba(0,0,0,0.06)' }
+              ticks: { color: '#1f2937', font: { size: 13, weight: '600' } },
+              grid: { display: false }
             }
-          }
+          },
+          layout: { padding: { right: 130 } }
         }
       });
     }
 
-    window.setExpView = function(v) { expCurrentView = v; renderExpBreakdown(); };
-    window.expYearChanged = function() {
-      expCurrentYear = document.getElementById('expYearSelect').value;
-      expCurrentView = 'monthly';
+    window.expPeriodChanged = function() {
+      var sel = document.getElementById('expPeriodDropdown');
+      if (sel) expCurrentPeriod = sel.value;
       renderExpBreakdown();
     };
     window.initExpBreakdownChart = renderExpBreakdown;
     renderExpBreakdown();
   })();
+
 
   // ─── 3. REVENUE BY PLATFORM (from file data) ────────────────────────────────────────
   (function(){
