--- a/index.html
+++ b/index.html
@@ -1816,9 +1816,12 @@ function initDashboard() {
         window._dashInc[ym]  = (window._dashInc[ym]  || 0) + t.amount;
         if (t.prop) window._dashPropInc[t.prop] = (window._dashPropInc[t.prop] || 0) + t.amount;
         var plat = 'Direct (Zelle / Other)';
-        if (t.desc.indexOf('PadSplit') >= 0)                       plat = 'PadSplit';
-        else if (t.desc.indexOf('VCI Clearing') >= 0)              plat = 'RentPerfect / VCI';
-        else if (t.desc.indexOf('Airbnb') >= 0 || t.desc.indexOf('AIRBNB') >= 0) plat = 'Airbnb';
+        if (t.desc.indexOf('PadSplit') >= 0)                                                  plat = 'PadSplit';
+        else if (t.desc.indexOf('VCI Clearing') >= 0)                                         plat = 'RentPerfect / VCI';
+        else if (t.desc.indexOf('Airbnb') >= 0 || t.desc.indexOf('AIRBNB') >= 0)             plat = 'Airbnb';
+        else if (t.desc.toUpperCase().indexOf('VENMO') >= 0)                                  plat = 'Venmo';
+        else if (t.desc.toUpperCase().indexOf('CASH APP') >= 0 || t.desc.toUpperCase().indexOf('CASHAPP') >= 0) plat = 'Cash App';
+        else if (t.desc.toUpperCase().indexOf('PAYPAL') >= 0)                                 plat = 'PayPal';
         window._dashPlat[plat] = (window._dashPlat[plat] || 0) + t.amount;
       } else {
         if (_isCC(t.desc)) return;
